// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`it works 1`] = `
.c0 {
  position: relative;
  padding: 0;
  padding-top: 0;
  padding-bottom: 0;
  padding-left: 0;
  padding-right: 0;
}

<div
  class="c0"
>
  Hello world!
</div>
`;

exports[`it works 2`] = `
.c0 {
  position: relative;
  padding: 0.25rem;
  padding-top: 0.25rem;
  padding-bottom: 0.25rem;
  padding-left: 0.25rem;
  padding-right: 0;
}

<div
  class="c0"
>
  Hello world!
</div>
`;

exports[`it works 3`] = `
.c0 {
  position: relative;
  padding: 0.5rem;
  padding-top: 0.5rem;
  padding-bottom: 0.5rem;
  padding-left: 0.5rem;
  padding-right: 0;
}

<div
  class="c0"
>
  Hello world!
</div>
`;

exports[`it works 4`] = `
.c0 {
  position: relative;
  padding: 0.75rem;
  padding-top: 0.75rem;
  padding-bottom: 0.75rem;
  padding-left: 0.75rem;
  padding-right: 0;
}

<div
  class="c0"
>
  Hello world!
</div>
`;

exports[`it works 5`] = `
.c0 {
  position: relative;
  padding: 1rem;
  padding-top: 1rem;
  padding-bottom: 1rem;
  padding-left: 1rem;
  padding-right: 0;
}

<div
  class="c0"
>
  Hello world!
</div>
`;

exports[`it works with gutterX 1`] = `
.c0 {
  position: relative;
  padding: 0;
  padding-top: 0;
  padding-bottom: 0;
  padding-left: 0;
  padding-right: 0;
}

<div
  class="c0"
>
  Hello world!
</div>
`;

exports[`it works with gutterX 2`] = `
.c0 {
  position: relative;
  padding: 0;
  padding-top: 0;
  padding-bottom: 0;
  padding-left: 0.25rem;
  padding-right: 0.25rem;
}

<div
  class="c0"
>
  Hello world!
</div>
`;

exports[`it works with gutterX 3`] = `
.c0 {
  position: relative;
  padding: 0;
  padding-top: 0;
  padding-bottom: 0;
  padding-left: 0.5rem;
  padding-right: 0.5rem;
}

<div
  class="c0"
>
  Hello world!
</div>
`;

exports[`it works with gutterX 4`] = `
.c0 {
  position: relative;
  padding: 0;
  padding-top: 0;
  padding-bottom: 0;
  padding-left: 0.75rem;
  padding-right: 0.75rem;
}

<div
  class="c0"
>
  Hello world!
</div>
`;

exports[`it works with gutterX 5`] = `
.c0 {
  position: relative;
  padding: 0;
  padding-top: 0;
  padding-bottom: 0;
  padding-left: 1rem;
  padding-right: 1rem;
}

<div
  class="c0"
>
  Hello world!
</div>
`;

exports[`it works with gutterY 1`] = `
.c0 {
  position: relative;
  padding: 0;
  padding-top: 0;
  padding-bottom: 0;
  padding-left: 0;
  padding-right: 0;
}

<div
  class="c0"
>
  Hello world!
</div>
`;

exports[`it works with gutterY 2`] = `
.c0 {
  position: relative;
  padding: 0;
  padding-top: 0.25rem;
  padding-bottom: 0.25rem;
  padding-left: 0;
  padding-right: 0.25rem;
}

<div
  class="c0"
>
  Hello world!
</div>
`;

exports[`it works with gutterY 3`] = `
.c0 {
  position: relative;
  padding: 0;
  padding-top: 0.5rem;
  padding-bottom: 0.5rem;
  padding-left: 0;
  padding-right: 0.5rem;
}

<div
  class="c0"
>
  Hello world!
</div>
`;

exports[`it works with gutterY 4`] = `
.c0 {
  position: relative;
  padding: 0;
  padding-top: 0.75rem;
  padding-bottom: 0.75rem;
  padding-left: 0;
  padding-right: 0.75rem;
}

<div
  class="c0"
>
  Hello world!
</div>
`;

exports[`it works with gutterY 5`] = `
.c0 {
  position: relative;
  padding: 0;
  padding-top: 1rem;
  padding-bottom: 1rem;
  padding-left: 0;
  padding-right: 1rem;
}

<div
  class="c0"
>
  Hello world!
</div>
`;
